Bug 279770 - Crash when copypasting from masks.
Summary: Crash when copypasting from masks.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filter Layers (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-09 23:11 UTC by pentalis
Modified: 2011-10-30 14:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pentalis 2011-08-09 23:11:21 UTC
Affects both filter and transparency masks.

How to reproduce:
1.- Create a filter or transparency mask.
2.- Select it in the Layer Docker.
3.- With the select tool, select an area in the canvas.
4.- Copy.
5.- Paste anywhere.
6.- Crash.


Console output with Assert:
krita(17957)/koffice (lib pigment) KoColorSpace::compositeOp: Asking for non-existent composite operation  "copy" , returning  "normal" 
krita(17957): "[
0: /usr/lib/libkdecore.so.5(_Z14kRealBacktracei+0x38) [0x7fad64e2aef8]
1: /home/pentalis/GIT_TEMPLE/kde4/install/lib/libkritaimage.so.8(+0x7dd59) [0x7fad6b216d59]
2: /home/pentalis/GIT_TEMPLE/kde4/install/lib/libkritaimage.so.8(_ZN14KisPaintDevice4initE12KisSharedPtrI14KisDataManagerEPK12KoColorSpaceS0_I16KisDefaultBoundsE16KisWeakSharedPtrI7KisNodeERK7QString+0x56) [0x7fad6b2db4c6]
3: /home/pentalis/GIT_TEMPLE/kde4/install/lib/libkritaimage.so.8(_ZN14KisPaintDeviceC1EPK12KoColorSpaceRK7QString+0x102) [0x7fad6b2dbe82]
4: /home/pentalis/GIT_TEMPLE/kde4/install/lib/libkritaui.so.8(_ZN12KisClipboard4clipERK6QPoint+0x7b8) [0x7fad6b738fa8]
5: /home/pentalis/GIT_TEMPLE/kde4/install/lib/libkritaui.so.8(_ZN19KisSelectionManager5pasteEv+0x206) [0x7fad6b7b91a6]
6: /home/pentalis/GIT_TEMPLE/kde4/install/lib/libkritaui.so.8(_ZN19KisSelectionManager11qt_metacallEN11QMetaObject4CallEiPPv+0xfd) [0x7fad6b7baf2d]
7: /usr/lib/libQtCore.so.4(_ZN11QMetaObject8activateEP7QObjectPKS_iPPv+0x306) [0x7fad6bce02e6]
8: /usr/lib/libQtGui.so.4(_ZN7QAction9triggeredEb+0x32) [0x7fad6562d132]
9: /usr/lib/libQtGui.so.4(_ZN7QAction8activateENS_11ActionEventE+0x7b) [0x7fad6562f1ab]
10: /usr/lib/libQtGui.so.4(+0x633751) [0x7fad65a6e751]
11: /usr/lib/libQtGui.so.4(+0x6392e2) [0x7fad65a742e2]
12: /usr/lib/libkdeui.so.5(_ZN5KMenu17mouseReleaseEventEP11QMouseEvent+0x3e) [0x7fad6642781e]
13: /usr/lib/libQtGui.so.4(_ZN7QWidget5eventEP6QEvent+0x9f2) [0x7fad65689632]
14: /usr/lib/libQtGui.so.4(_ZN5QMenu5eventEP6QEvent+0x6b) [0x7fad65a764db]
15: /usr/lib/libQtGui.so.4(_ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent+0xac) [0x7fad6563332c]
16: /usr/lib/libQtGui.so.4(_ZN12QApplication6notifyEP7QObjectP6QEvent+0x91b) [0x7fad65639fdb]
17: /usr/lib/libkdeui.so.5(_ZN12KApplication6notifyEP7QObjectP6QEvent+0x36) [0x7fad6634b796]
18: /usr/lib/libQtCore.so.4(_ZN16QCoreApplication14notifyInternalEP7QObjectP6QEvent+0x8c) [0x7fad6bccd09c]
19: /usr/lib/libQtGui.so.4(_ZN19QApplicationPrivate14sendMouseEventEP7QWidgetP11QMouseEventS1_S1_PS1_R8QPointerIS0_Eb+0x19e) [0x7fad656391be]
20: /usr/lib/libQtGui.so.4(+0x27e4fd) [0x7fad656b94fd]
21: /usr/lib/libQtGui.so.4(_ZN12QApplication15x11ProcessEventEP7_XEvent+0x7dc) [0x7fad656b79dc]
22: /usr/lib/libQtGui.so.4(+0x2a8e81) [0x7fad656e3e81]
23: /usr/lib/libQtCore.so.4(_ZN10QEventLoop13processEventsE6QFlagsINS_17ProcessEventsFlagEE+0x32) [0x7fad6bccb9c2]
24: /usr/lib/libQtCore.so.4(_ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE+0xdc) [0x7fad6bccbd9c]
25: /usr/lib/libQtCore.so.4(_ZN16QCoreApplication4execEv+0xbb) [0x7fad6bcd0a2b]
26: /home/pentalis/GIT_TEMPLE/kde4/install/lib/libkdeinit4_krita.so(kdemain+0x1b7) [0x7fad6c013c07]
27: /lib/libc.so.6(__libc_start_main+0xfd) [0x7fad63fd9c4d]
28: krita() [0x4008b9]
]
" 
ASSERT: "colorSpace" in file /home/pentalis/GIT_TEMPLE/kde4/source/calligra/krita/image/kis_paint_device.cc, line 209
KCrash: Application 'krita' crashing...
sock_file=/home/pentalis/.kde/socket-pentalis/kdeinit4__0
QSocketNotifier: Invalid socket 36 and type 'Read', disabling...



Backtrace:

Application: Krita (krita), signal: Aborted
The current source language is "auto; currently asm".
[Current thread is 1 (Thread 0x7fad6c357780 (LWP 17957))]

Thread 10 (Thread 0x7fad478f9700 (LWP 17966)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fad6bbdee6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007fad6bbdac04 in QSemaphore::acquire(int) () from /usr/lib/libQtCore.so.4
#3  0x00007fad6b21e286 in KisTileDataPooler::waitForWork (this=0x71fd430) at /home/pentalis/GIT_TEMPLE/kde4/source/calligra/krita/image/tiles3/kis_tile_data_pooler.cc:162
#4  0x00007fad6b21e5e0 in KisTileDataPooler::run (this=0x71fd430) at /home/pentalis/GIT_TEMPLE/kde4/source/calligra/krita/image/tiles3/kis_tile_data_pooler.cc:184
#5  0x00007fad6bbdde15 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007fad63da58ba in start_thread (arg=<value optimized out>) at pthread_create.c:300
#7  0x00007fad6408a02d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#8  0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7fad480fa700 (LWP 17968)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fad6bbdee6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007fad6bbdaa24 in QSemaphore::tryAcquire(int, int) () from /usr/lib/libQtCore.so.4
#3  0x00007fad6b239180 in KisTileDataSwapper::run (this=0x71fd468) at /home/pentalis/GIT_TEMPLE/kde4/source/calligra/krita/image/tiles3/swap/kis_tile_data_swapper.cpp:92
#4  0x00007fad6bbdde15 in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007fad63da58ba in start_thread (arg=<value optimized out>) at pthread_create.c:300
#6  0x00007fad6408a02d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7fad357f6700 (LWP 17974)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fad6bbdee6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007fad65b3a1e6 in ?? () from /usr/lib/libQtGui.so.4
#3  0x00007fad6bbdde15 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007fad63da58ba in start_thread (arg=<value optimized out>) at pthread_create.c:300
#5  0x00007fad6408a02d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7fad35ff7700 (LWP 17975)):
#0  0x00007fad640838d3 in select () at ../sysdeps/unix/syscall-template.S:82
#1  0x00007fad6bcf3c3e in qt_safe_select(int, fd_set*, fd_set*, fd_set*, timeval const*) () from /usr/lib/libQtCore.so.4
#2  0x00007fad6bcf8ffd in QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timeval*) () from /usr/lib/libQtCore.so.4
#3  0x00007fad6bcf9fdb in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007fad6bccb9c2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007fad6bccbd9c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007fad6bbdb77b in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007fad6bcac338 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007fad6bbdde15 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007fad63da58ba in start_thread (arg=<value optimized out>) at pthread_create.c:300
#10 0x00007fad6408a02d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7fad2d4db700 (LWP 17984)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:211
#1  0x00007fad6bbdedd2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007fad6bbd3e01 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007fad6bbdde15 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007fad63da58ba in start_thread (arg=<value optimized out>) at pthread_create.c:300
#5  0x00007fad6408a02d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7fad2a3c6700 (LWP 17985)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:211
#1  0x00007fad6bbdedd2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007fad6bbd3e01 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007fad6bbdde15 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007fad63da58ba in start_thread (arg=<value optimized out>) at pthread_create.c:300
#5  0x00007fad6408a02d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7fad27196700 (LWP 17986)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:211
#1  0x00007fad6bbdedd2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007fad6bbd3e01 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007fad6bbdde15 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007fad63da58ba in start_thread (arg=<value optimized out>) at pthread_create.c:300
#5  0x00007fad6408a02d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fad26995700 (LWP 17987)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:211
#1  0x00007fad6bbdedd2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007fad6bbd3e01 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007fad6bbdde15 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007fad63da58ba in start_thread (arg=<value optimized out>) at pthread_create.c:300
#5  0x00007fad6408a02d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fad25993700 (LWP 17992)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:211
#1  0x00007fad6bbdedd2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007fad6bbd3e01 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007fad6bbdde15 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007fad63da58ba in start_thread (arg=<value optimized out>) at pthread_create.c:300
#5  0x00007fad6408a02d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fad6c357780 (LWP 17957)):
[KCrash Handler]
#5  0x00007fad63fed165 in *__GI_raise (sig=<value optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#6  0x00007fad63feff70 in *__GI_abort () at abort.c:92
#7  0x00007fad6bbd5c7f in qt_message_output(QtMsgType, char const*) () from /usr/lib/libQtCore.so.4
#8  0x00007fad6bbd5e22 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007fad6bbd5fd5 in qFatal(char const*, ...) () from /usr/lib/libQtCore.so.4
#10 0x00007fad6b2db535 in KisPaintDevice::init (this=0x9312fe0, explicitDataManager=) at /home/pentalis/GIT_TEMPLE/kde4/source/calligra/krita/image/kis_paint_device.cc:209
#11 0x00007fad6b2dbe82 in KisPaintDevice (this=0x9312fe0, colorSpace=<value optimized out>, name=<value optimized out>)
    at /home/pentalis/GIT_TEMPLE/kde4/source/calligra/krita/image/kis_paint_device.cc:183
#12 0x00007fad6b738fa8 in KisClipboard::clip (this=<value optimized out>, topLeftHint=<value optimized out>) at /home/pentalis/GIT_TEMPLE/kde4/source/calligra/krita/ui/kis_clipboard.cc:237
#13 0x00007fad6b7b91a6 in KisSelectionManager::paste (this=0x83027c0) at /home/pentalis/GIT_TEMPLE/kde4/source/calligra/krita/ui/kis_selection_manager.cc:424
#14 0x00007fad6b7baf2d in KisSelectionManager::qt_metacall (this=0x83027c0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>)
    at /home/pentalis/GIT_TEMPLE/kde4/build/calligra/krita/ui/kis_selection_manager.moc:117
#15 0x00007fad6bce02e6 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#16 0x00007fad6562d132 in QAction::triggered(bool) () from /usr/lib/libQtGui.so.4
#17 0x00007fad6562f1ab in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQtGui.so.4
#18 0x00007fad65a6e751 in ?? () from /usr/lib/libQtGui.so.4
#19 0x00007fad65a742e2 in ?? () from /usr/lib/libQtGui.so.4
#20 0x00007fad6642781e in KMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libkdeui.so.5
#21 0x00007fad65689632 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#22 0x00007fad65a764db in QMenu::event(QEvent*) () from /usr/lib/libQtGui.so.4
#23 0x00007fad6563332c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#24 0x00007fad65639fdb in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#25 0x00007fad6634b796 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#26 0x00007fad6bccd09c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#27 0x00007fad656391be in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#28 0x00007fad656b94fd in ?? () from /usr/lib/libQtGui.so.4
#29 0x00007fad656b79dc in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#30 0x00007fad656e3e81 in ?? () from /usr/lib/libQtGui.so.4
#31 0x00007fad6bccb9c2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#32 0x00007fad6bccbd9c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#33 0x00007fad6bcd0a2b in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#34 0x00007fad6c013c07 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at /home/pentalis/GIT_TEMPLE/kde4/source/calligra/krita/main.cc:71
#35 0x00007fad63fd9c4d in __libc_start_main (main=<value optimized out>, argc=<value optimized out>, ubp_av=<value optimized out>, init=<value optimized out>, fini=<value optimized out>, 
    rtld_fini=<value optimized out>, stack_end=0x7fffc7f24a98) at libc-start.c:228
#36 0x00000000004008b9 in _start ()
Comment 1 Halla Rempt 2011-10-30 14:30:06 UTC
Git commit 2bb5a18abae5aa42a7838fa66bb658ccc2cfbbc1 by Boudewijn Rempt.
Committed on 30/10/2011 at 15:27.
Pushed by rempt into branch 'master'.

Fix bug 279770

In some circumstances, we would not be able to create a colorspace. If
that's the case, try to load the QImage part of the mime data.

BUG:279770

M  +16   -8    krita/ui/kis_clipboard.cc

http://commits.kde.org/calligra/2bb5a18abae5aa42a7838fa66bb658ccc2cfbbc1