Fix bug 279770

In some circumstances, we would not be able to create a colorspace. If
that's the case, try to load the QImage part of the mime data.

BUG:279770